--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/cookie": "^0.5.3",
+    "cookie": "^0.5.0",
     "npm": "^10.1.0",
-    "passport": "^0.6.0",
-    "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
   }
 }
